--- a/full_stack_foundations/templates/delete_menu_item.html
+++ b/full_stack_foundations/templates/delete_menu_item.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delete Item</title>
-</head>
-<body>
+{% extends 'base.html' %}
+<title>Delete Item</title>
+{% block content %}
 
-<h1>
-    Are you sure you want to delete </br>
-    {{ menu.name }}?
-</h1>
+    <h1>
+        Are you sure you want to delete </br>
+        {{ menu.name }}?
+    </h1>
 
-<form action="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, menu_id=menu.id) }}" method="post">
-    <input type="submit" value="Delete">
-</form>
+    <form action="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, menu_id=menu.id) }}" method="post">
+        <input type="submit" value="Delete">
+    </form>
 
-</body>
-</html>
+{% endblock %}
