--- a/full_stack_foundations/templates/menu.html
+++ b/full_stack_foundations/templates/menu.html
@@ -1,28 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>FLASK</title>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+<div class='pane'>
+    <div class='header'>
+        <h1>{{ restaurant.name }}</h1>
+    </div>
+    <a href='{{ url_for('new_menu_item', restaurant_id = restaurant.id) }}'>Create New Item</a>
+    <div class='flash'>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                        <li><strong> {{ message }} </strong></li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+    </div>
+    {% for i in items %}
+        <div class='nameAndPrice'>
+            <span class='name'><p>{{ i.name }}</p></span>
+		<span class='price'>
 
-<h1>{{ restaurant.name }}</h1>
-<a href="{{ url_for('new_menu_item', restaurant_id=restaurant.id) }}">Create New Item</a>
-</br></br>
+		<p>{{ i.price }} </p>
+	</span>
+        </div>
+        <div class='description'>
+            <p>{{ i.description }}</p>
+        </div>
 
-{% for item in items %}
-    {{ item.name }}
-    </br>
-    {{ item.description }}
-    </br>
-    {{ item.price }}
-    </br>
-    <a href="{{ url_for('edit_menu_item', restaurant_id=restaurant.id, menu_id=item.id) }}">Edit</a>
-    </br>
-    <a href="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, menu_id=item.id) }}">Delete</a>
-    </br>
-    </br>
-{% endfor %}
+        <div class="editdeletepane">
 
+            <a href='{{ url_for('edit_menu_item',restaurant_id = restaurant.id, menu_id=i.id) }}'>Edit</a>
+            <a href='{{ url_for('delete_menu_item', restaurant_id = restaurant.id, menu_id=i.id) }}'>
+                Delete</a>
+        </div>
+    {% endfor %}
+</div>
+</div>
 </body>
 </html>
