--- a/full_stack_foundations/templates/new_menu_item.html
+++ b/full_stack_foundations/templates/new_menu_item.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>New Item</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<h1>New Menu Item</h1>
+{% block content %}
+    <h1>New Menu Item</h1>
 
-<form action="{{ url_for('new_menu_item', restaurant_id=restaurant.id) }}"
-      method='post'>
+    <form action="{{ url_for('new_menu_item', restaurant_id=restaurant.id) }}" method='post'>
 
-    <p>Name:</p>
-    <input type="text" size="30" name="name">
+        <p>Name:</p>
+        <input type="text" size="30" name="name">
 
-    <input type="submit" value="Create">
+        <input type="submit" value="Create">
 
-</form>
+    </form>
 
-</body>
-</html>
+{% endblock %}
